fixed viewport horizontal scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Base */
-html {
+html,body {
   overflow-x: hidden; }
 
 .font-size-10 {
